--- a/Project/public/index.html
+++ b/Project/public/index.html
@@ -2,7 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SmoothOp</title>
+    <style>
+      body {
+        width: 300px;
+        min-height: 400px;
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+      }
+      #root {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
